--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "frontend-map",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "jasny-bootstrap": "^3.1.3"
   },
   "overrides": {
     "bootstrap": {
