--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "jasny-bootstrap": "^3.1.3"
+    "jasny-bootstrap": "^3.1.3",
+    "knockout": "^3.4.0"
   },
   "overrides": {
     "bootstrap": {
