--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "jasny-bootstrap": "^3.1.3",
-    "knockout": "^3.4.0"
+    "knockout": "^3.4.0",
+    "font-awesome": "fontawesome#^4.6.3"
   },
   "overrides": {
     "bootstrap": {
